<resources>
    <string name="app_name">CST438_Group5_Project1</string>
    <string name="my_profile">My Profile</string>
    <string name="search_for_jobs">Search for Jobs</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="logout">Logout</string>
    <string name="enter_button">Enter</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_interests">Enter your interests</string>
    <string name="create_button">Create Account</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="saveChanges">Save Changes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="interests">Interests</string>
    <string name="deleteProf">Delete Profile</string>
    <string name="editProf">Edit Profile</string>
</resources>